--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Custom React hook for REST network call",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "homepage": "https://github.com/mym0404/useApi",
+  "homepage": "https://github.com/mym0404/useRest",
   "scripts": {
     "check": "yarn lint && yarn tsc && yarn jest --coverage -u",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
@@ -13,7 +13,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/mym0404/useApi"
+    "url": "https://github.com/mym0404/useRest"
   },
   "keywords": [
     "react-native"
