--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-rest",
-  "version": "1.0.0-alpha01",
+  "version": "1.0.0-alpha02",
   "description": "Custom React hook for REST network call",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -25,8 +25,7 @@
     "react-native": ">=0.59"
   },
   "dependencies": {
-    "abortcontroller-polyfill": "^1.4.0",
-    "url": "^0.11.0"
+    "abortcontroller-polyfill": "^1.4.0"
   },
   "devDependencies": {
     "@dooboo/eslint-config": "^0.3.8",
@@ -58,5 +57,8 @@
       "style": "eslint",
       "options": {}
     }
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
