--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "use-rest",
-  "version": "1.0.0-rc17",
+  "version": "1.0.0-rc21",
   "description": "Custom React hook for REST network call",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/mym0404/useRest",
   "scripts": {
-    "prepare": "yarn run check",
-    "check": "yarn lint && yarn tsc && yarn jest --coverage -u",
+    "prepare": "yarn c",
+    "c": "yarn lint && yarn tsc && yarn jest --coverage -u",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
     "test": "jest"
   },
@@ -26,27 +26,28 @@
     "react-native": ">=0.59"
   },
   "dependencies": {
-    "abortcontroller-polyfill": "^1.4.0"
+    "abortcontroller-polyfill": "^1.4.0",
+    "mj-studio-js-util": "0.0.3"
   },
   "devDependencies": {
-    "@dooboo/eslint-config": "^0.3.8",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@types/eslint": "^6.1.8",
-    "@types/jest": "^25.1.4",
+    "@dooboo/eslint-config": "^0.4.3",
+    "@testing-library/react-hooks": "^3.4.1",
+    "@types/eslint": "^7.2.0",
+    "@types/jest": "^26.0.9",
     "@types/react": "16.9.23",
     "@types/react-native": "0.61.20",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "import-sort-style-eslint": "^6.0.0",
-    "jest": "^25.1.0",
+    "eslint": "7.6.0",
+    "eslint-plugin-react-hooks": "4.0.8",
+    "import-sort-style-eslint": "6.0.0",
+    "jest": "26.3.0",
     "jest-fetch-mock": "^3.0.3",
-    "prettier": "^1.19.1",
-    "prettier-plugin-import-sort": "^0.0.3",
+    "prettier": "^2.0.5",
+    "prettier-plugin-import-sort": "^0.0.4",
     "react": "16.13.1",
     "react-native": "0.62.0",
     "react-test-renderer": "^16.13.0",
-    "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3"
+    "typescript": "3.9.7",
+    "ts-jest": "26.1.1"
   },
   "importSort": {
     ".js, .jsx": {
