--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mj-studio/react-native-rest-util",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Custom React hook and Rest adapter for network call",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,27 +28,28 @@
   },
   "dependencies": {
     "abortcontroller-polyfill": "^1.4.0",
-    "@mj-studio/js-util": "0.0.4"
+    "@mj-studio/js-util": "1.0.3"
   },
   "devDependencies": {
-    "@dooboo/eslint-config": "^0.4.3",
-    "@testing-library/react-hooks": "^3.4.1",
-    "@types/eslint": "^7.2.0",
-    "@types/jest": "^26.0.9",
+    "@babel/eslint-parser": "7.17.0",
+    "@dooboo/eslint-config": "1.3.0",
+    "@testing-library/react-hooks": "7.0.2",
+    "@types/eslint": "8.4.1",
+    "@types/jest": "26.0.24",
     "@types/react": "16.9.23",
     "@types/react-native": "0.61.20",
-    "eslint": "7.6.0",
+    "eslint": "8.8.0",
     "eslint-plugin-react-hooks": "4.0.8",
     "import-sort-style-eslint": "6.0.0",
-    "jest": "26.3.0",
-    "jest-fetch-mock": "^3.0.3",
-    "prettier": "^2.0.5",
-    "prettier-plugin-import-sort": "^0.0.4",
-    "react": "16.13.1",
-    "react-native": "0.62.0",
+    "jest": "26.6.3",
+    "jest-fetch-mock": "3.0.3",
+    "prettier": "2.5.1",
+    "prettier-plugin-import-sort": "0.0.7",
+    "react": "17.0.2",
+    "react-native": "0.67.2",
     "react-test-renderer": "^16.13.0",
-    "typescript": "3.9.7",
-    "ts-jest": "26.1.1"
+    "typescript": "4.4.4",
+    "ts-jest": "26.5.6"
   },
   "importSort": {
     ".js, .jsx": {
