--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@mj-studio/react-native-rest-util",
-  "version": "3.0.2",
+  "name": "@mj-studio/http-client",
+  "version": "1.0.0",
   "description": "Custom React hook and Rest adapter for network call",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "homepage": "https://github.com/mym0404/react-native-rest-util",
+  "homepage": "https://github.com/mym0404/http-client",
   "scripts": {
     "prepare": "yarn c",
     "c": "yarn lint && yarn tsc && yarn jest --coverage -u",
@@ -15,38 +15,24 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/mym0404/react-native-rest-util"
+    "url": "https://github.com/mym0404/http-client"
   },
-  "keywords": [
-    "react-native"
-  ],
   "author": "MJ Studio <mym0404@gmail.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "react": ">16.8.0",
-    "react-native": ">=0.59"
-  },
   "dependencies": {
     "@mj-studio/js-util": "1.0.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.17.0",
     "@dooboo/eslint-config": "1.3.0",
-    "@testing-library/react-hooks": "7.0.2",
     "@types/eslint": "8.4.1",
     "@types/jest": "26.0.24",
-    "@types/react": "16.9.23",
-    "@types/react-native": "0.61.20",
     "eslint": "8.8.0",
-    "eslint-plugin-react-hooks": "4.0.8",
     "import-sort-style-eslint": "6.0.0",
     "jest": "26.6.3",
     "jest-fetch-mock": "3.0.3",
     "prettier": "2.5.1",
     "prettier-plugin-import-sort": "0.0.7",
-    "react": "17.0.2",
-    "react-native": "0.67.2",
-    "react-test-renderer": "^16.13.0",
     "typescript": "4.4.4",
     "ts-jest": "26.5.6"
   },
